--- a/Mindspace_Interview/style/button.css
+++ b/Mindspace_Interview/style/button.css
@@ -13,12 +13,25 @@
 .profile-button {
   display: flex;
   flex-direction: colum;
-  padding: 20px;
+  padding-right: 20px;
   width: 70%;
-  float: right;
+  float: left;
   color: #50596A;
   background-color: #19283B;
   border: none;
+  padding-left: 5px;
+}
+
+.profile-icon {
+  width: 21px;
+  height: 26px;
+  left: 0;
+  margin: 0;
+}
+.document-icon {
+  width: 21px;
+  height: 26px;
+  align-items: center;
 }
 
 .next-btn {
