--- a/Mindspace_Interview/style/button.css
+++ b/Mindspace_Interview/style/button.css
@@ -13,7 +13,7 @@
 .profile-button {
   display: flex;
   flex-direction: colum;
-  padding-right: 20px;
+  padding-right: 30px;
   width: 70%;
   float: left;
   color: #50596A;
@@ -27,12 +27,27 @@
   height: 26px;
   left: 0;
   margin: 0;
+  margin-right: 5px;
 }
 .document-icon {
   width: 21px;
   height: 26px;
   align-items: center;
 }
+
+.user-ja
+.user-nein{
+  border: none;
+}
+
+.user-save-button {
+  font-family: OpenSans, sans-serif;
+  font-size: 17px;
+font-weight: 700;
+color:#6D78D8;
+border: none;
+}
+
 
 .next-btn {
   width: 108px;
