--- a/Mindspace_Interview/style/button.css
+++ b/Mindspace_Interview/style/button.css
@@ -39,13 +39,25 @@
 .user-nein{
   border: none;
 }
-
 .user-save-button {
   font-family: OpenSans, sans-serif;
   font-size: 17px;
 font-weight: 700;
 color:#6D78D8;
 border: none;
+}
+
+.document-button {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+}
+
+.save {
+position: relative;
+bottom: 10px;
+right:10px;
+top:280px;
 }
 
 
