--- a/Mindspace_Interview/style/template_page.css
+++ b/Mindspace_Interview/style/template_page.css
@@ -243,6 +243,7 @@ body {
   width: 15%;
   height: 8%;
   margin: 20px;
+  display: flex;
 }
 
 .aside-element {
@@ -253,6 +254,8 @@ body {
   text-align: center;
   font-size: 13px;
   box-shadow: -5px 0px 5px 0px #EEEEEE;
+  flex-direction: column;
+  align-items: center;
 }
 
 .profile-button {
