Add 'edit' capability on User Area Page

--- a/Mindspace_Interview/style/box.css
+++ b/Mindspace_Interview/style/box.css
@@ -122,6 +122,19 @@ body {
   width: 70%;
 }
 
+.interest-list {
+  display: flex;
+flex-wrap: wrap;
+}
+
+.interest-card-header {
+  display: flex;
+}
+
+.mini-container {
+  display: flex;
+}
+
 .aside {
   background: purple;
   width: 10%;
