--- a/Mindspace_Interview/style/text.css
+++ b/Mindspace_Interview/style/text.css
@@ -44,23 +44,35 @@
   color: #5B5A5A;
   text-align: left;
 }
+
 .it-card-item {
   font-size: 13px;
   font-family: OpenSans, sans-serif;
   color: #50596A;
 }
 
-.interest-item {
-min-width: 44px;
-height: 28px;
-padding-left: 4px;
-padding-right: 4px;
-font-family: OpenSans-Regular;
-font-size: 13px;
-text-align: center;
-line-height: 18px;
-color: #333333;
-background-color: #EEEEEE;}
+.interest-item-card {
+  font-family: OpenSans-Regular, sans-serif;
+  font-size: 13px;
+  text-align: center;
+  color: #333333;
+  margin: 4px 12px;
+  min-width: 44px;
+  height: 28px;
+}
+
+.interest-item, .practice-item {
+  background-color: #EEEEEE;
+  padding-left: 8px;
+  padding-right: 7px;
+  line-height: 23px;
+}
+
+.interest-card {
+  padding: 0px 0px 2px 16px;
+  border-left: 1px solid black;
+  margin-left: 16px;
+}
 
 .timer {
   text-align: right;
@@ -83,8 +95,23 @@ background-color: #EEEEEE;}
   text-align: center;
   color: #333333;
 }
+
 .left-edit {
   margin-left: 30px;
+  position: relative;
+  right: -17%;
+  display: block;
+}
+
+.right-edit {
+  margin-right: 10px;
+  position: relative;
+  right: -17%;
+  display: block;
+}
+
+.interest-input, .practice-input {
+  max-width: 65px;
 }
 
 .join {
@@ -93,7 +120,8 @@ background-color: #EEEEEE;}
   text-align: center;
   color: #5B5A5A;
 }
-.privacy-text{
+
+.privacy-text {
   width: 485px;
   height: 195px;
   font-family: OpenSans-Regular;
@@ -128,18 +156,22 @@ background-color: #EEEEEE;}
 .user-area-background {
   max-width: 904px;
   max-height: 729px;
-  background-color: #F4F8FB;}
+  background-color: #F4F8FB;
+}
 
 .card-title {
-font-family: OpenSans, sans-serif;
-font-size: 13px;
-font-weight: 700;
-color: #50596A;
+  font-family: OpenSans, sans-serif;
+  font-size: 13px;
+  font-weight: 700;
+  color: #50596A;
+  margin-bottom: .75rem;
+  padding-left: 7px;
 }
+
 .detail-title {
-font-family: OpenSans-Bold, sans-serif;
-font-size: 13px;
-color: #50596A;
+  font-family: OpenSans-Bold, sans-serif;
+  font-size: 13px;
+  color: #50596A;
 }
 
 .details-card {
@@ -184,25 +216,29 @@ color: #50596A;
   flex-direction: row;
   font-family: OpenSans-Italic, sans-serif;
 }
+
 #stat-edit {
   text-align: right;
-  float: right;
 }
+
 .bio-header {
   color: #50596A;
 }
+
 .bio-summary {
   color: #C4C4C4;
   font-size: 13px;
 }
+
 body {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: row;
 }
+
 .left-aside {
-  width:10%;
+  width: 10%;
   background: #19283B;
 }
 
@@ -243,8 +279,8 @@ body {
 
 .aside {
   background: purple;
-  width:10%;
-  height:10%;
+  width: 10%;
+  height: 10%;
   margin: 20px;
 }
 
@@ -262,11 +298,11 @@ body {
   flex-direction: colum;
   padding: 20px;
   width: 70%;
-  float: right;
   color: #50596A;
   background-color: #19283B;
   border: none;
 }
+
 .profile-preferences {
   width: 40%;
   display: flex;
