--- a/Mindspace_Interview/style/button.css
+++ b/Mindspace_Interview/style/button.css
@@ -12,15 +12,14 @@
 
 .profile-button {
   display: flex;
-  flex-direction: colum;
-  padding-right: 30px;
+  padding: 10px;
+  padding-left: 5px;
   width: 70%;
-  float: left;
   color: #50596A;
   background-color: #19283B;
   border: none;
-  padding-left: 5px;
 }
+
 
 .profile-icon {
   width: 21px;
