--- a/Mindspace_Interview/style/button.css
+++ b/Mindspace_Interview/style/button.css
@@ -20,7 +20,6 @@
   border: none;
 }
 
-
 .profile-icon {
   width: 21px;
   height: 26px;
@@ -28,22 +27,23 @@
   margin: 0;
   margin-right: 5px;
 }
+
 .document-icon {
   width: 21px;
   height: 26px;
   align-items: center;
 }
 
-.user-ja
-.user-nein{
+.user-ja .user-nein {
   border: none;
 }
+
 .user-save-button {
   font-family: OpenSans, sans-serif;
   font-size: 17px;
-font-weight: 700;
-color:#6D78D8;
-border: none;
+  font-weight: 700;
+  color: #6D78D8;
+  border: none;
 }
 
 .document-button {
@@ -53,12 +53,11 @@ border: none;
 }
 
 .save {
-position: relative;
-bottom: 10px;
-right:10px;
-top:280px;
+  position: relative;
+  bottom: 10px;
+  right: 10px;
+  top: 280px;
 }
-
 
 .next-btn {
   width: 108px;
@@ -111,59 +110,18 @@ top:280px;
   text-align: center;
 }
 
-/*Dropdown menus/buttons*/
-
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  width: 60px;
-  height: 10px;
+.btn-secondary {
+  width: 58px;
+  height: 20px;
   color: #555555;
   background-color: #FFFFFF;
-  border: 1px solid #CCCCCC;
+  border: 1px solid#CCCCCC;
   border-radius: 2px;
 }
 
-/* Dropdown button on hover & focus */
-
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #ffffff;
-  width: 60px;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {
-  background-color: #f1f1f1
-}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-
-.show {
-  display: block;
+.dropdown-item {
+  font-family: OpenSans, sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  text-align: center;
 }
