--- a/Mindspace_Interview/style/text.css
+++ b/Mindspace_Interview/style/text.css
@@ -18,7 +18,7 @@
 .forgot.create {
   width: 90px;
   height: 21px;
-  font-family: OpenSans-Regular;
+  font-family: OpenSans-Regular, sans-serif;
   font-size: 11px;
   color: #5B5A5A;
 }
@@ -39,7 +39,7 @@
 .question-text {
   width: 485px;
   height: 98px;
-  font-family: OpenSans-Light;
+  font-family: OpenSans-Light, sans-serif;
   font-size: 16px;
   color: #5B5A5A;
   text-align: left;
@@ -47,7 +47,7 @@
 
 .it-card-item {
   font-size: 13px;
-  font-family: OpenSans, sans-serif;
+  font-family: OpenSans-Regular,sans-serif;
   color: #50596A;
 }
 
@@ -90,7 +90,7 @@
 .exit-text {
   width: 470px;
   height: 175px;
-  font-family: OpenSans-Regular;
+  font-family: OpenSans-Regular, sans-serif;
   font-size: 16px;
   text-align: center;
   color: #333333;
@@ -124,14 +124,14 @@
 .privacy-text {
   width: 485px;
   height: 195px;
-  font-family: OpenSans-Regular;
+  font-family: OpenSans-Regular, sans-serif;
   font-size: 16px;
   text-align: center;
   color: #333333;
 }
 
 .email-cta {
-  font-family: OpenSans-Regular;
+  font-family: OpenSans-Regular, sans-serif;
   font-size: 16px;
   text-align: center;
   color: #333333;
@@ -160,7 +160,7 @@
 }
 
 .card-title {
-  font-family: OpenSans, sans-serif;
+  font-family: OpenSans-Regular,sans-serif;
   font-size: 13px;
   font-weight: 700;
   color: #50596A;
@@ -190,7 +190,7 @@
 }
 
 .invite-email.invite-social {
-  font-family: OpenSans-Regular;
+  font-family: OpenSans-Regular, sans-serif;
   font-size: 13px;
   color: #50596A;
 }
