--- a/Mindspace_Interview/style/button.css
+++ b/Mindspace_Interview/style/button.css
@@ -36,10 +36,11 @@
 
 .user-ja .user-nein {
   border: none;
+  margin-left: auto;
 }
 
 .user-save-button {
-  font-family: OpenSans, sans-serif;
+  font-family: OpenSans-Regular, sans-serif;
   font-size: 17px;
   font-weight: 700;
   color: #6D78D8;
@@ -47,15 +48,20 @@
 }
 
 .document-button {
-  flex-direction: column;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  border: none;
 }
 
 .save {
-  bottom: 10px;
+  /*bottom: 10px;
   right: 10px;
-  top: 280px;
+  top: 280px;*/
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-bottom: auto !important;
 }
 
 .next-btn {
