--- a/Mindspace_Interview/style/template_page.css
+++ b/Mindspace_Interview/style/template_page.css
@@ -248,22 +248,23 @@ body {
 
 .aside {
   width: 15%;
-  height: 8%;
+  height: 7%;
   margin: 20px;
   display: flex;
 }
 
 .aside-element {
-  background: #FFFFFF;
-  height: 100px;
+  height: 80px;
   width: 100%;
-  margin-bottom: 20px;
-  text-align: center;
   font-size: 13px;
-  box-shadow: -5px 0px 5px 0px #EEEEEE;
+  margin-bottom: 20px;
+  padding-top: 5px;
+  background: #FFFFFF;
+  text-align: center;
   flex-direction: column;
-  align-items: center;
+  box-shadow: -5px 0px 5px 0px #EEEEEE;
 }
+
 .intro-circle-logo {
   width: 90%;
   height: auto;
